MediaTime::invalidTime() conversion to CMTime incorrectly creates a valid time. https://bugs.webkit.org/show_bug.cgi?id=237473 rdar://problem/89814921

Reviewed by Jer Noble.

Source/WebCore:

Fly-by fix: update call to AVOutputContextOutputDevicesDidChangeNotification
now that the access macro got fixed.

API Test added.

* platform/audio/ios/MediaSessionHelperIOS.mm:
(-[WebMediaSessionHelper startMonitoringAirPlayRoutes]):
* platform/graphics/avfoundation/objc/AVRoutePickerViewTargetPicker.mm:
(WebCore::AVRoutePickerViewTargetPicker::outputContextInternal):
(WebCore::AVRoutePickerViewTargetPicker::routeDetector):
(WebCore::AVRoutePickerViewTargetPicker::invalidatePlaybackTargets):
(-[WebAVRoutePickerViewHelper notificationHandler:]):

Source/WebCore/PAL:

Fly-by fix: macro definition to access method
AVOutputContextOutputDevicesDidChangeNotification was incorrect.

* pal/avfoundation/MediaTimeAVFoundation.cpp:
(PAL::toCMTime): Ensure that if the converted time was invalid. The
flag is carried accross.
* pal/cocoa/AVFoundationSoftLink.h:

Tools:

Fly-by fixes: AVFoundationSoftLinkTest wasn't being compiled

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebCore/cocoa/AVFoundationSoftLinkTest.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebCore/cocoa/CoreMediaUtilities.mm: Added.
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/248144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290964 268f45cc-cd09-0410-ab3c-d52691b4dbfc